api güncelleme
