# routes/api.php
@@ -24,6 +24,7 @@ Route::post('user/register', 'Api\UserController@register');
 // region Etkinlikler
 Route::post('event/index', 'Api\EventController@index');
 Route::post('event/create', 'Api\EventController@create');
+Route::post('event/show', 'Api\EventController@show');
 // endregion
 
 Route::middleware('auth:api')->get('/user', function (Request $request) {
